--- a/chess.html
+++ b/chess.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.shutterstock.com%2Fimage-photo%2Fking-battle-chess-game-stand-260nw-737956801.jpg&tbnid=ZpBo6mde6y6DCM&vet=10CBIQxiAoBGoXChMImJiVjMSxigMVAAAAAB0AAAAAEAY..i&imgrefurl=https%3A%2F%2Fwww.shutterstock.com%2Fimage-photo%2Fking-battle-chess-game-stand-on-736500862&docid=ZbNdLq2uMX2lTM&w=405&h=280&itg=1&q=https%3A%2F%2Fimages.pexels.com%2Fphotos%2F260024%2Fpexels-photo-260024.jpeg&ved=0CBIQxiAoBGoXChMImJiVjMSxigMVAAAAAB0AAAAAEAY">
+    <meta property="og:image" content="https://www.freepik.com/premium-ai-image/fantastical-landscapes-most-amazing-trending-hd-wallpaper_134915670.htm#from_view=detail_alsolike">
     <meta property="og:description" content="a game board used to play chess it consist of 64 squares,8rows by 8columns,on which the chess pieces are placed">
     <meta property="og:title" content="CHESS BOARD">
     <meta name="author" content="UDAY KIRAN">
