--- a/chess.html
+++ b/chess.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://www.freepik.com/premium-ai-image/fantastical-landscapes-most-amazing-trending-hd-wallpaper_134915670.htm#from_view=detail_alsolike">
+    <meta property="og:image" content="https://img.freepik.com/premium-photo/fantastical-landscapes-most-amazing-trending-hd-wallpaper_915071-104868.jpg?w=1060">
     <meta property="og:description" content="a game board used to play chess it consist of 64 squares,8rows by 8columns,on which the chess pieces are placed">
     <meta property="og:title" content="CHESS BOARD">
     <meta name="author" content="UDAY KIRAN">
