--- a/chess.html
+++ b/chess.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://img.freepik.com/premium-photo/fantastical-landscapes-most-amazing-trending-hd-wallpaper_915071-104868.jpg?w=1060">
+    <meta property="og:image" content="https://t4.ftcdn.net/jpg/05/79/05/81/240_F_579058185_7E5hEfKem2f07rg1HU8WEUtKUCBYwV4Q.jpg">
     <meta property="og:description" content="a game board used to play chess it consist of 64 squares,8rows by 8columns,on which the chess pieces are placed">
     <meta property="og:title" content="CHESS BOARD">
     <meta name="author" content="UDAY KIRAN">
